force-app/main/default/objects/Voyage__c/Voyage__c.object-meta.xml
<CustomObject>
    <description>Shipment of parcel of containers from port to port</description>
    <label>Voyage</label>
    <nameField>
        <displayFormat>UCV-{000000}</displayFormat>
        <label>Voyage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voyages</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>