force-app/main/default/objects/Voyage__c/fields/Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date__c</fullName>
    <description>date of vessel&apos;s arrival to port of discharge</description>
    <inlineHelpText>date of vessel&apos;s arrival to port of discharge</inlineHelpText>
    <label>Date of Arrival to Discharging Port</label>
    <type>Date</type>
</CustomField>