force-app/main/default/objects/Voyage__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <description>date of vessel&apos;s departure from loading port</description>
    <inlineHelpText>date of vessel&apos;s departure from loading port</inlineHelpText>
    <label>Date of Sailing From Loading Port</label>
    <type>Date</type>
</CustomField>