force-app/main/default/objects/Voyage__c/fields/Discharging_Port__c.field-meta.xml
<CustomField>
    <fullName>Discharging_Port__c</fullName>
    <description>port where the voyage ends</description>
    <inlineHelpText>port where the voyage ends</inlineHelpText>
    <label>Discharging Port</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ports</valueSetName>
    </valueSet>
</CustomField>