force-app/main/default/objects/Voyage__c/fields/Loading_Port__c.field-meta.xml
<CustomField>
    <fullName>Loading_Port__c</fullName>
    <description>port, where the voyage starts</description>
    <inlineHelpText>port, where the voyage starts</inlineHelpText>
    <label>Loading Port</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ports</valueSetName>
    </valueSet>
</CustomField>