force-app/main/default/objects/Voyage__c/fields/Red_Containers_Shiped__c.field-meta.xml
<CustomField>
    <fullName>Red_Containers_Shiped__c</fullName>
    <label>Red Containers Shiped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>