force-app/main/default/objects/Voyage__c/fields/Ship__c.field-meta.xml
<CustomField>
    <fullName>Ship__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>name of the vessel performing voyage</description>
    <inlineHelpText>name of the vessel performing voyage</inlineHelpText>
    <label>Ship</label>
    <referenceTo>Ship__c</referenceTo>
    <relationshipLabel>Voyages</relationshipLabel>
    <relationshipName>Voyages</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>