force-app/main/default/objects/Voyage__c/fields/TEUs_Loaded__c.field-meta.xml
<CustomField>
    <fullName>TEUs_Loaded__c</fullName>
    <description>Quantity of twenty-foot equivalent units loaded</description>
    <inlineHelpText>Quantity of twenty-foot equivalent units loaded</inlineHelpText>
    <label>TEUs Loaded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>