force-app/main/default/objects/Voyage__c/fields/Total_Consignments_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Total_Consignments_Shipped__c</fullName>
    <description>Total number of consignments shipped on current voyage</description>
    <inlineHelpText>Total number of consignments shipped on current voyage</inlineHelpText>
    <label>Total Consignments Shipped</label>
    <summaryForeignKey>Consignment__c.Voyage__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>