force-app/main/default/objects/Voyage__c/validationRules/Voyage_Dates_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Voyage_Dates_Validation</fullName>
    <active>true</active>
    <description>Arrival to Discharging Port should be later than Departure from Loading Port</description>
    <errorConditionFormula>Arrival_Date__c  &lt;  Departure_Date__c</errorConditionFormula>
    <errorMessage>Arrival to Discharging Port should be later than Departure from Loading Port</errorMessage>
</ValidationRule>